[package]
name = "restack"
version = "0.1.0"
edition = "2024"
authors = ["Raine Revere"]
description = "Rebase stacked PRs onto their current base branches"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.18"

[dev-dependencies]
tempfile = "3.14"
